@@ -1,6 +1,7 @@
 v2.6.1 - xx xxx xxxx
 ---------------------
-
+   - Fedora packaging:
+     * A package upgrade does not automatically restart OVS service.
 
 v2.6.0 - 27 Sep 2016
 ---------------------
